crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__annotated_lambda_returning_async_block.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: "(x: Number) Task[Number] -> async { x + 1 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 44,
        },
    },
    value: Lambda(
        Lambda {
            params: [
                Param {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 3,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    annotation: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: Named {
                                path: Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 11,
                                                },
                                            },
                                            value: "Number",
                                        },
                                    ],
                                },
                                args: [],
                            },
                        },
                    ),
                },
            ],
            ret: Some(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    value: Named {
                        path: Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 17,
                                        },
                                    },
                                    value: "Task",
                                },
                            ],
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 24,
                                    },
                                },
                                value: Named {
                                    path: Path {
                                        segments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 18,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 24,
                                                    },
                                                },
                                                value: "Number",
                                            },
                                        ],
                                    },
                                    args: [],
                                },
                            },
                        ],
                    },
                },
            ),
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 29,
                    },
                    end: Position {
                        line: 1,
                        column: 44,
                    },
                },
                value: Async(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 44,
                            },
                        },
                        value: Block {
                            stmts: [],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 37,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 42,
                                        },
                                    },
                                    value: BinOps {
                                        operands: [
                                            BinOpOperand {
                                                expr: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 37,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 38,
                                                        },
                                                    },
                                                    value: Var(
                                                        "x",
                                                    ),
                                                },
                                                op: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 39,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 40,
                                                        },
                                                    },
                                                    value: Add,
                                                },
                                            },
                                        ],
                                        last: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 41,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 42,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 1.0,
                                                    text: "1",
                                                },
                                            ),
                                        },
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        },
    ),
}
