crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__error_assign_bad_target.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: () -> 1 += 2
---
Lambda(
    AssignTarget(
        Add,
        1,
        7,
    ),
    1,
    1,
)
