crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__error_assign_bad_target_slash_equals.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: () -> f() /= 2
---
Lambda(
    AssignTarget(
        Div,
        1,
        7,
    ),
    1,
    1,
)
