crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__error_assign_no_value.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: fn() x +=
---
Lambda(
    AssignValue(
        Start(
            1,
            10,
        ),
        1,
        10,
    ),
    1,
    1,
)
