crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__error_bad_param.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: fn(+) 1
---
Lambda(
    Params(
        Pattern(
            Start(
                1,
                4,
            ),
            1,
            4,
        ),
        1,
        3,
    ),
    1,
    1,
)
