crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__error_missing_body.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: () ->
---
Lambda(
    Body(
        Start(
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
