crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__error_missing_parens.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: fn x
---
Lambda(
    Params(
        Open(
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
