crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_assign_body.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: fn() count += 1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Lambda(
        Lambda {
            params: [],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                value: Block(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: Block {
                            stmts: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 6,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                    },
                                    value: Assign {
                                        place: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 6,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 11,
                                                },
                                            },
                                            value: Place {
                                                root: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 6,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 11,
                                                        },
                                                    },
                                                    value: "count",
                                                },
                                                steps: [],
                                            },
                                        },
                                        op: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 12,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 14,
                                                },
                                            },
                                            value: Add,
                                        },
                                        value: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 15,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 16,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 1.0,
                                                    text: "1",
                                                },
                                            ),
                                        },
                                    },
                                },
                            ],
                            tail: None,
                        },
                    },
                ),
            },
        },
    ),
}
