crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_block_single_name_is_block.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: "() -> { x }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Lambda(
        Lambda {
            params: [],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Block(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: Block {
                            stmts: [],
                            tail: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 10,
                                        },
                                    },
                                    value: Var(
                                        "x",
                                    ),
                                },
                            ),
                        },
                    },
                ),
            },
        },
    ),
}
