crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_body_parens.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: fn() (a)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Lambda(
        Lambda {
            params: [],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        },
    ),
}
