crates/alder-parse/src/expression/snapshots/alder_parse__expression__lambda__tests__lambda_expr_body.snap
---
source: crates/alder-parse/src/expression/lambda.rs
description: x -> x + 1
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Lambda(
        Lambda {
            params: [
                Param {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 1,
                            },
                            end: Position {
                                line: 1,
                                column: 2,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                    annotation: None,
                },
            ],
            ret: None,
            body: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: BinOps {
                    operands: [
                        BinOpOperand {
                            expr: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 7,
                                    },
                                },
                                value: Var(
                                    "x",
                                ),
                            },
                            op: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 9,
                                    },
                                },
                                value: Add,
                            },
                        },
                    ],
                    last: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 10,
                            },
                            end: Position {
                                line: 1,
                                column: 11,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 1.0,
                                text: "1",
                            },
                        ),
                    },
                },
            },
        },
    ),
}
